src/objects/vlocity_ins__FormularyDrugStepTherapy__c.object
<CustomObject>
    <description>Defines authorization rules for an expensive formulary drug and its alternate, cheaper drugs available under the formulary. Master-detail child object of Formulary Drug.</description>
    <fields>
        <fullName>vlocity_ins__AgeRestriction__c</fullName>
        <label>Age Restriction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageDuration__c</fullName>
        <label>Coverage Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoveredUsage__c</fullName>
        <label>Covered Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugName__c</fullName>
        <formula>IF(vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__TradeName__c, vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__GenericName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExclusionCriteria__c</fullName>
        <label>Exclusion Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyDrugId__c</fullName>
        <label>Formulary Drug</label>
        <referenceTo>vlocity_ins__FormularyDrug__c</referenceTo>
        <relationshipLabel>Formulary Drug Step Therapy (Formulary Drug)</relationshipLabel>
        <relationshipName>DrugStepTherapy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MedicalCondition__c</fullName>
        <label>Medical Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MedicalInformation__c</fullName>
        <label>Medical Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OtherCriteria__c</fullName>
        <label>Other Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrescribeRestriction__c</fullName>
        <label>Prescribe Restriction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriorAuthorizationCriteria__c</fullName>
        <label>Prior Authorization Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriorAuthorizationGroup__c</fullName>
        <label>Prior Authorization Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepFormularyDrugId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Formulary Drug</label>
        <referenceTo>vlocity_ins__FormularyDrug__c</referenceTo>
        <relationshipName>DrugStepTherapyFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepOrder__c</fullName>
        <label>Step Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepTherapyCriteria__c</fullName>
        <label>Step Therapy Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StepTherapyGroup__c</fullName>
        <label>Step Therapy Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Formulary Drug Step Therapy</label>
    <nameField>
        <label>Step Therapy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Drug Step Therapy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>